Substituted CSS and HTML with project's

--- a/style.css
+++ b/style.css
@@ -1,4 +1,97 @@
- h1 {
-        text-lign: center;
-        color: blue;
-      }
+.fullpage {
+  font-family: Arial, Helvetica, sans-serif;
+  background: #fefdfe;
+  border: 1px solid #000000;
+  text-align: left;
+  margin: 20px;
+  width: 450px;
+  height: 580px;
+}
+
+h1 {
+  font-size: 40px;
+  color: #ffffff;
+  text-align: right;
+  padding: 20px 18px 0 0;
+}
+
+.board {
+  margin: 0 auto;
+  width: 450x;
+  height: 284px;
+  background-image: url("img/sun_pigeon.png");
+  text-shadow: 1px 2px 2px black;
+}
+
+.col-7 {
+  font-size: 20px;
+  text-align: left;
+  position: relative;
+  top: 10px;
+  left: 40px;
+}
+
+.degrees {
+  font-size: 50px;
+  font-weight: bolder;
+}
+
+.col-5 {
+  font-size: 20px;
+  text-align: right;
+  position: relative;
+  top: 25px;
+  right: 40px;
+}
+
+.input-group {
+  margin: 0 0 0 40px;
+  position: relative;
+  top: 20px;
+}
+
+.button {
+  color: white;
+  background-color: black;
+  border-radius: 0.375rem;
+}
+
+.form-control {
+  max-width: 200px;
+}
+
+.nextweek {
+  width: 440px;
+  text-align: center;
+  font-size: 17px;
+  position: relative;
+  top: 10px;
+  left: 5px;
+}
+
+.fa-sun {
+  color: #d6ad60;
+  font-size: 25px;
+  padding: 10px 0;
+}
+
+.fa-cloud-sun {
+  color: #21b6a8;
+  font-size: 25px;
+  padding: 10px 0;
+}
+
+.fa-cloud-rain {
+  color: #b9b7bd;
+  font-size: 25px;
+  padding: 10px 0;
+}
+
+.location {
+  font-size: 20px;
+  background-color: #fefdfe;
+  border: none;
+  position: relative;
+  top: -15px;
+  right: -290px;
+}
