Improved UX of change measure buttons
Added the active class to ºC and ºF buttons.

--- a/style.css
+++ b/style.css
@@ -102,3 +102,9 @@ h1 {
   font-size: 11px;
   padding: 30px 0px 0px 0px;
 }
+
+.col-7 .active {
+  color: black;
+  cursor: default;
+  text-decoration: none;
+}
